--- a/css/stylereceita.css
+++ b/css/stylereceita.css
@@ -4,6 +4,10 @@
     box-sizing: border-box;
     font-family: Arial, Helvetica, sans-serif;
 }
+body {
+    background-color: cornsilk;
+    margin: 0;
+}
 
 /* cabeçalho */
 header {
